--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:animateLayoutChanges="true"
     >
 
@@ -16,18 +16,18 @@
       />
 
   <ScrollView
-      android:layout_below="@id/fragment_login_toolbar"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:layout_below="@id/fragment_login_toolbar"
       >
 
     <LinearLayout
         android:id="@+id/fragment_login_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:focusable="true"
         android:focusableInTouchMode="true"
+        android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -75,6 +75,16 @@
           android:layout_gravity="center"
           android:layout_marginTop="30dp"
           android:text="@string/login"
+          style="@style/Buttonuploader_button_theme"
+          />
+
+      <Button
+          android:id="@+id/fragment_login_facebook_button"
+          android:layout_width="150dp"
+          android:layout_height="50dp"
+          android:layout_gravity="center"
+          android:layout_marginTop="30dp"
+          android:text="@string/com_facebook_loginview_log_in_button"
           style="@style/Buttonuploader_button_theme"
           />
 
